--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>index Leto</title>
+<title>index</title>
 <meta name="ad.size" content="width=3000,height=250">
+<!-- <meta content="width=device-width, initial-scale=1" name="viewport"> -->
 <script src="gsap.min.js"></script>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="index.js"></script>
