--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
 <title>index</title>
-<meta name="ad.size" content="width=3000,height=250">
+<meta name="ad.size" content="width=1920,height=250">
 <!-- <meta content="width=device-width, initial-scale=1" name="viewport"> -->
 <script src="gsap.min.js"></script>
+<style>
+  #animation_container {
+	position:absolute;
+	margin:auto;
+	left:0;right:0;
+  }
+</style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="index.js"></script>
 <script>
@@ -36,7 +43,7 @@ function handleComplete(evt,comp) {
 	for(i=0; i<ssMetadata.length; i++) {
 		ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
 	}
-	exportRoot = new lib.terra_960x250elastic();
+	exportRoot = new lib.terra_960x250_2elastic();
 	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
@@ -67,8 +74,8 @@ function handleComplete(evt,comp) {
 <body onload="init();" style="margin:0px;">
 	<a href="%banner.reference_mrc_user1%" target="%banner.target%">
 	<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:100%; height:250px">
-		<canvas id="canvas" width="3000" height="250" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:3000px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
+		<canvas id="canvas" width="1920" height="250" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1920px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
 		</div>
 	</div>
 </a>
